--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Sample-efficient imitation learning">
   <meta name="keywords" content="Robotics, Robotic manipulation, Deep learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SEIL: Simulation-augmented Equivariant Imitation Learning</title>
+  <title>Open-vocabulary Pick and Place via Patch-level Semantic Maps</title>
 
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QY7838Q5K7"></script>
@@ -87,37 +87,37 @@
           <h1 class="title is-1 publication-title">Open-vocabulary Pick and Place via Patch-level Semantic Maps</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://saulbatman.github.io/">Mingxi Jia*</a><sup></sup>,</span>
+              <a href="https://saulbatman.github.io/">Mingxi Jia*</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://haojhuang.github.io/">Haojie Huang*</a><sup></sup>,</span>
+              <a href="https://haojhuang.github.io/">Haojie Huang*</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://openreview.net/profile?id=~Zhewen_Zhang1">Zhewen Zhang</a><sup></sup>,
+              <a href="https://openreview.net/profile?id=~Zhewen_Zhang1">Zhewen Zhang</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.linkedin.com/in/chenghao-wang-01a036203">Chenghao Wang</a><sup></sup>,
+              <a href="https://www.linkedin.com/in/chenghao-wang-01a036203">Chenghao Wang</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://lfzhao.com/">Linfeng Zhao</a><sup>1</sup>,
+              <a href="https://lfzhao.com/">Linfeng Zhao</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://pointw.github.io/">Dian Wang</a><sup></sup>,
+              <a href="https://pointw.github.io/">Dian Wang</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://jasonxyliu.github.io/">Jason Xinyu Liu</a><sup></sup>,
+              <a href="https://jasonxyliu.github.io/">Jason Xinyu Liu</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.khoury.northeastern.edu/people/robin-walters/">Robin Walters</a><sup></sup>,
+              <a href="https://www.khoury.northeastern.edu/people/robin-walters/">Robin Walters</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.khoury.northeastern.edu/people/robert-platt/">Robert Platt</a><sup></sup>
+              <a href="https://www.khoury.northeastern.edu/people/robert-platt/">Robert Platt</a><sup>2</sup>
             </span>
             <span class="author-block">
-              <a href="https://vivo.brown.edu/display/stellex">Stefanie Tellex</a><sup></sup>
+              <a href="https://vivo.brown.edu/display/stellex">Stefanie Tellex</a><sup>1</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup></sup>Brown University Northeastern University</span>
+            <span class="author-block">Brown University<sup>1</sup>, Northeastern University<sup>2</sup></span>
           </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>*</sup>Equal contribution</span>
@@ -181,7 +181,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Given limited data, SEIL learns robust close-loop controller.
+        Given limited data, GEM learns open-vocabulary pick-and-place policies or a multi-task policy.
       </h2>
     </div>
   </div>
