--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/"
+                <a href="https://youtu.be/E0rsIMsGNmg"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
